2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  removed debug message.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs: Display
	  no suggestions message in preview completion string mode,
	  when no item has a match.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Fixed "Bug 537195 - Can't select a 'Surround With' template
	  by typing the name".

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Fixed
	  "Bug 537267 - Code completion window scrolling is wrong".

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/GeneralProjectOptions.cs:
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.GeneralProjectOptionsWidget.cs:
	  Allow setting the release version of a project. Fixes bug
	  #480771 - Tarball deploy uses DotNetProject.Version in the
	  pc file but this is not configurable.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CodeFormattingPanel.cs:
	  Fix NRE.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  fixed warning.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.csproj: Updated dependencies. We
	  now depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/AddMimeTypeDialog.cs: If